signup functional, responsiveness working

--- a/styles/game.css
+++ b/styles/game.css
@@ -69,6 +69,11 @@ width:2%;
     color:#ffffff !important;
 }
 
+.btn-orange{
+    background-color:#FF8700 !important;
+    color:#ffffff !important;
+}
+
 .btn-font{
     font-size:2rem !important;
 }
