--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ max-height:4rem !important;
 
 .main-2{
     background-color:#ABD8ED;
-    height: 35vh;
+    min-height: 35vh;
 }
 
 .logo img {
@@ -65,6 +65,11 @@ width:2%;
     color:#ffffff !important;
 }
 
+.btn-orange{
+    background-color:#FF8700 !important;
+    color:#ffffff !important;
+}
+
 .btn-font{
     font-size:2rem !important;
 }
@@ -75,4 +80,27 @@ width:15%;
 
 .row div{
     min-height:6rem;
+}
+
+[onclick] {
+    cursor: pointer;
+}
+
+/*  media query */
+
+@media only screen and (max-width: 1200px) {
+    .logo-orange {
+    width: 4%;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .logo-orange {
+    width: 8%;
+    }
+
+    .row div{
+        min-height: 9.5rem;
+    }
+
 }
